# PhasmaEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VulkanMonkey.sln
.github/workflows/: cmake.yml
Phasma/: main.cpp
Phasma/Assets/Scripts/: CMakeLists.txt  CPPcallbacks.cs  Corset.cs  DamagedHelmet.cs  Duck.cs  Helper.cs  Load.cs  ScriptTest.cpp  ScriptTest.h  ScriptTest1.h  ScriptTest2.cpp  ScriptTest2.h  Terrain.cs
Phasma/Assets/Shaders/: compileShaders.bat
Phasma/Code/App/: App.cpp  App.h
Phasma/Code/Camera/: Camera.cpp  Camera.h
Phasma/Code/Components/: Camera.cpp  Camera.h
Phasma/Code/Compute/: Compute.cpp  Compute.h
Phasma/Code/Console/: Console.cpp  Console.h
Phasma/Code/Context/: Context.cpp  Context.h
Phasma/Code/Core/: Base.h  Buffer.cpp  Buffer.h  Defines.h  Delegate.h  Enums.cpp  Enums.h  EventSystem.cpp  EventSystem.h  Externs.h  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  FileWatcher.h  Hash.cpp  Hash.h  Image.cpp  Image.h  Light.cpp  Light.h  Math.cpp  Math.h  Node.cpp  Node.h  Path.h  Queue.h  Settings.h  Surface.cpp  Surface.h  SyncQueue.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  Vertex.cpp  Vertex.h
Phasma/Code/Deferred/: Deferred.cpp  Deferred.h
Phasma/Code/ECS/: Component.cpp  Component.h  Context.cpp  Context.h  ECSBase.h  Entity.h  System.h
Phasma/Code/Event/: Delegate.h  EventSystem.cpp  EventSystem.h
Phasma/Code/GUI/: GUI.cpp  GUI.h
Phasma/Code/MemoryHash/: MemoryHash.h
Phasma/Code/Model/: Animation.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Object.cpp  Object.h  StreamReader.h
Phasma/Code/PostProcess/: Bloom.cpp  Bloom.h  DOF.cpp  DOF.h  FXAA.cpp  FXAA.h  MotionBlur.cpp  MotionBlur.h  SSAO.cpp  SSAO.h  SSGI.cpp  SSGI.h  SSR.cpp  SSR.h  SuperResolution.cpp  SuperResolution.h  TAA.cpp  TAA.h  Test.cpp  Test.h
Phasma/Code/RenderPasses/: AabbsPass.cpp  AabbsPass.h  BloomPass.cpp  BloomPass.h  DOFPass.cpp  DOFPass.h  DepthPass.cpp  DepthPass.h  FXAAPass.cpp  FXAAPass.h  GbufferPass.cpp  GbufferPass.h  LightPass.cpp  LightPass.h  MotionBlurPass.cpp  MotionBlurPass.h  SSAOPass.cpp  SSAOPass.h  SSRPass.cpp  SSRPass.h  ShadowPass.cpp  (+5 more)
Phasma/Include/: PhasmaPch.cpp  PhasmaPch.h
Phasma/Libs/: SDL2.lib  SDL2main.lib  dxcompiler.lib  ffx_fsr2_api_vk_x64.lib  ffx_fsr2_api_vk_x64d.lib  ffx_fsr2_api_x64.lib  ffx_fsr2_api_x64d.lib  shaderc_shared.lib  spirv-cross-core.lib  vulkan-1.lib
PhasmaCore/: CMakeLists.txt
PhasmaCore/Code/API/: AccelerationStructure.cpp  AccelerationStructure.h  Buffer.cpp  Buffer.h  Command.cpp  Command.h  Debug.cpp  Debug.h  Descriptor.cpp  Descriptor.h  Event.cpp  Event.h  Framebuffer.cpp  Framebuffer.h  Helpers.cpp  Helpers.h  Image.cpp  Image.h  Light.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  RHI.cpp  RHI.h  Reflection.cpp  Reflection.h  RenderPass.cpp  RenderPass.h  RingBuffer.cpp  RingBuffer.h  Semaphore.cpp  Semaphore.h  Shader.cpp  Shader.h  ShaderCache.cpp  ShaderCache.h  StagingManager.cpp  StagingManager.h  Surface.cpp  (+4 more)
PhasmaCore/Code/API/Downsampler/: Downsampler.cpp  Downsampler.h
PhasmaCore/Code/API/Vulkan/: Buffer.cpp  Command.cpp  Debug.cpp  Descriptor.cpp  Event.cpp  Framebuffer.cpp  Helpers.cpp  Image.cpp  Pipeline.cpp  Queue.cpp  RHI.cpp  RenderPass.cpp  Semaphore.cpp  Surface.cpp  Swapchain.cpp
PhasmaCore/Code/Base/: Base.h  Defines.h  Delegate.h  Enums.h  EventSystem.cpp  EventSystem.h  Externs.h  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  FileWatcher.h  Hash.h  Log.cpp  Log.h  Math.cpp  Math.h  Path.h  Settings.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h
PhasmaCore/Code/Core/: Base.h  Defines.h  EventSystem.h  Externs.h  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  FileWatcher.h  Math.h  Path.h  Settings.h  ThreadPool.cpp  ThreadPool.h
PhasmaCore/Code/ECS/: Component.cpp  Component.h  Context.cpp  Context.h  Entity.h  System.h
PhasmaCore/Code/Renderer/: Command.h  Debug.h  Image.h  Pipeline.h  Queue.h  RHI.h  Renderer.cpp  Shader.cpp  Shader.h  ShaderCache.cpp
PhasmaCore/Code/Renderer/Downsampler/: Downsampler.cpp
PhasmaCore/Code/Renderer/Vulkan/: Descriptor.cpp  Framebuffer.cpp  Helpers.cpp  Image.cpp  Pipeline.cpp  Queue.cpp  RHI.cpp  RenderPass.cpp  Semaphore.cpp  Surface.cpp
PhasmaCore/Libs/SDL2/: SDL2.lib  SDL2main.lib
PhasmaCore/Libs/dx/: dxcompiler.lib
PhasmaCore/Libs/sdl2/: SDL2main.lib
PhasmaCore/Libs/spirv/: shaderc_shared.lib  spirv-cross-core.lib
PhasmaCore/Libs/vulkan/: libvulkan.so.1  vulkan.lib
PhasmaCore/pch/: PhasmaPch.cpp  PhasmaPch.h
PhasmaEditor/: main.cpp
PhasmaEditor/Assets/Scripts/: CMakeLists.txt  ScriptObject.h  ScriptObject.peh  ScriptTest.cpp  ScriptTest.h  ScriptTest.pecpp  ScriptTest.peh  ScriptTest1.cpp  ScriptTest1.pecpp  ScriptTest1.peh  ScriptTest2.cpp  ScriptTest2.h  ScriptTest2.pecpp  ScriptTest2.peh
VulkanMonkey/: VulkanMonkey.vcxproj  VulkanMonkey.vcxproj.filters  assimp-vc140-mt.lib  imgui.ini  main.cpp
VulkanMonkey/Include/: vulkanPCH.cpp  vulkanPCH.h
VulkanMonkey/Libs/: assimp-vc140-mt.lib  mono-2.0-sgen.lib  shaderc_shared.lib
VulkanMonkey/Scripts/: Bob.cs  CPPcallbacks.cs  Corset.cs  DamagedHelmet.cs  Duck.cs  Entity.cs  Helper.cs  Load.cs  README.md  Test.cs  TestCSharp.cs  TestCSharp1.cs  _monoCmd.bat  compile_example.bat
VulkanMonkey/include/: Buffer.h  Camera.h  Component.h  Compute.h  Console.h  Context.h  Deferred.h  Errors.h  Forward.h  GLM.h  GUI.h  Image.h  Light.h  Math.h  Mesh.h  Model.h  MotionBlur.h  Node.h  Object.h  Pipeline.h  Renderer.h  SDL.h  SSAO.h  SSR.h  Shadows.h  Skybox.h  Stbi.h  Surface.h  Swapchain.h  Terrain.h  Timer.h  Vertex.h  Vulkan.h  VulkanContext.h  Window.h  specificGraphicsPipelineCreateInfo.h
VulkanMonkey/shaders/: compileShaders.bat
VulkanMonkey/src/: Buffer.cpp  Camera.cpp  Component.cpp  Compute.cpp  Console.cpp  Context.cpp  Deferred.cpp  Forward.cpp  GUI.cpp  Image.cpp  Light.cpp  Math.cpp  Mesh.cpp  Model.cpp  MotionBlur.cpp  Node.cpp  Object.cpp  Pipeline.cpp  Queue.cpp  Renderer.cpp  SSAO.cpp  SSR.cpp  Shadows.cpp  Skybox.cpp  Swapchain.cpp  Terrain.cpp  Timer.cpp  Vertex.cpp  Window.cpp
(+910 files in other folders)
